--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Assets\Scripts\QuizScripts\AnswerData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
+    <Compile Include="Assets\WinScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
